fixed 255 character email overflow

--- a/Cubeagram/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/Cubeagram/react-app/src/components/ProfilePage/ProfilePage.css
@@ -56,3 +56,8 @@
     max-height: 280px;
     min-height: 280px;
 }
+
+#displayed-email-user {
+    word-wrap: break-word;
+    max-width: 600px;
+}
